fix for home page overlap and adding Gallery page

--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ body{
 }
 /* .musician-container p{ */
 .musician-p{
-    padding: 2%;
+    /* padding: 2%; */
     flex:1;
     font-size: 1.2rem;
     line-height: 1.6;
@@ -237,9 +237,56 @@ body{
 color: rgb(213, 170, 5);
 }
 
+.header-page{
+    color:rgb(213, 170, 5);
+    text-align: center;
+    font-family: "Cormorant Upright", serif;
+    font-weight: 800;
+    /* font-size: 2.0rem; */
+}
              /* --------------GALLERY PAGE---------------- */
 
+.slideshow {
+    margin-left: 25%;
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+      align-items: center;  
+    position: relative;
+      width: 600px;
+      height: 500px;
+      overflow: hidden;
 
+    }
+
+.slide {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      animation: fade 9s infinite;
+      /* object-fit: cover; */
+      object-fit: contain;
+    }
+
+.slide:nth-child(1) { animation-delay: 0s; }
+.slide:nth-child(2) { animation-delay: 10s; }
+.slide:nth-child(3) { animation-delay: 20s; }
+/* .slide:nth-child(4) { animation-delay: 30s; }
+.slide:nth-child(5) { animation-delay: 40s; }
+.slide:nth-child(6) { animation-delay: 50s; } */
+/* .slide:nth-child(7) { animation-delay: 30s; }
+.slide:nth-child(8) { animation-delay: 35s; }
+.slide:nth-child(9) { animation-delay: 40s; }
+.slide:nth-child(10) { animation-delay: 45s; } */
+
+    @keyframes fade {
+      0% { opacity: 0; }
+      10% { opacity: 1; }
+      30% { opacity: 1; }
+      40% { opacity: 0; }
+      100% { opacity: 0; }
+    }
 
              /* --------------RESPONSIVE---------------- */
 
@@ -249,19 +296,26 @@ color: rgb(213, 170, 5);
         align-items: center;
         text-align: center;
     }
-   .nataraj,.invite{
+.nataraj{
     min-width: 100%;
+    max-width: 100%;
     height: 25vh;
-    z-index: 1;
-    padding:4%;
-   }
-  .nataraj{
+    /* z-index: 1; */
+    /* padding:4%; */
     background-size: contain;
     background-position: top center;
     background-repeat: no-repeat;
   }
+.invite{
+    min-width: 100%;
+    max-width: 100%;
+    height: auto;
+    /* z-index: 1; */
+    padding:4%;
+   }
+
   .ketki{
-    height:50vh;
+    height:60vh; 
     width:100%;
     background-position:center;
     background-repeat: no-repeat;
@@ -281,8 +335,8 @@ color: rgb(213, 170, 5);
  .musician-img,.musician-p{
     min-width: 80%;
     height: auto;
-    font-size: 1.3rem;
-    line-height: 1.3rem;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
     display: block;
     justify-content: space-around;
   }
@@ -305,6 +359,14 @@ color: rgb(213, 170, 5);
     height:50%;
     margin-top:8%;
   }
+
+.slideshow{
+     min-width: 50%;
+     width:60%;
+    height:60%;
+    align-items: center;
+    margin-top:8%;
+}
 .nav-links{
         display: none;
         flex-direction: column;
